# roam-embeddings-search

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  chroma_config.yaml  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.backend  Dockerfile.chunker  chunker_service.py  linearize.py  main.py  main_semantic.py  persistent_state.py  pyproject.toml  requirements.txt  roam.py  setup_ollama.sh  start.sh  sync_full.py  sync_semantic.py  sync_v1.py  sync_v2.py  sync_v3.py  sync_v5.py  test_block_refs.py  test_sync.py  utils.py
backend/cli/: sync.py
backend/clients/: __init__.py  chunker.py  roam.py  voyage.py  weaviate.py
backend/common/: config.py  errors.py  events.py  logging.py  retry.py  telemetry.py  utils.py  weaviate_factory.py
backend/old/: main.py  sync_full.py  sync_v4.py
backend/scripts/: README.md  setup_chunker_url.sh  verify_page_structure.py
backend/semantic_sync/: __init__.py  clients.py  metadata_phase.py  pipeline.py  state.py
backend/services/: __init__.py  chunker_service.py  scheduler.py  search_service.py  sync_service.py
backend/sync/: __init__.py  context.py  orchestrator.py  resources.py
backend/sync/data/: __init__.py  models.py  results.py  transform.py
backend/sync/pipeline/: __init__.py  batch_phase.py  metadata_phase.py
backend/sync/state/: __init__.py  db_persistence.py  file_persistence.py  (+1 more)
backend/tests/: conftest.py
mcp-semantic-search/: .env.example  README.md  client_backend.py  models.py  pyproject.toml  server.py
(+65 files in other folders)
